webapp/go/isucon9-qualify_default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: isucon9-qualify-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/isucon9-qualify-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/isucon9-qualify-default: "true"
